feat: apis and light mode
